--- a/Assets/less/bootstrap/utilities.less
+++ b/Assets/less/bootstrap/utilities.less
@@ -5,10 +5,20 @@
 
 //colors
 
+.black, .hover-black:hover {
+  color: #000;
+}
+
+
+.gray-sub {
+  color: @gray-light;
+}
 
 .gray {
   color: @gray;
 }
+
+
 .gray-light  {
   color: @gray-light;
 }
@@ -20,6 +30,10 @@
   border-top: 2px solid white;
 }
 
+.border-top-5px-white {
+  border-top: 5px solid white;
+}
+
 .border-top-2px-red {
   border-top: 2px solid @brand-danger;
 }
@@ -27,18 +41,36 @@
   border-top: 1px solid lighten(@gray-light, 33%);
 }
 
+.border-bottom-gray-light{
+  border-bottom: 1px solid lighten(@gray-light, 23%);
+}
+
 .border-right-gray-light {
   border-right: 1px solid lighten(@gray-light, 33%);
 }
 
-.border-5px, .border-img  {
+.border-5px, .border-img, .border-img-white  {
   border: 5px;
   border-style: solid;
+}
+
+.border-img-white{
+  border-color: white;
 }
 
 .border-3px, .border-img-small  {
   border: 2px;
   border-style: solid;
+}
+
+.border-1px-gray{
+  border: 1px;
+  border-style: solid;
+  border-color:#DBDBDB;
+}
+
+.border-top-0 {
+  border-top: 0;
 }
 
 
@@ -54,17 +86,56 @@
 
 
 .bg-gray-light {
-  background-color: lighten(@gray-light, 37%);
+  background-color: lighten(@gray-light, 35%);
+}
+
+.bg-gray-lighter {
+  background-color: darken(white, 2%);
 }
 
 
+.bg-gray-90 {
+  background-color: rgba(0,0,0,.1)
+}
 
-.bg-gray {
+
+.bg-gray, .bg-gray-hover:hover {
   background-color: @gray;
 }
 
 .bg-fb {
   background-color: #3b5998;
+}
+.bg-twitter {
+  background-color: #00aced;
+}
+
+.bg-googleplus {
+  background-color: #dd4b39;
+}
+
+.bg-youtube {
+  background-color: #bb0000;
+}
+
+
+.bg-pinterest {
+  background-color: #cb2027;
+}
+
+.bg-youtube {
+  background-color: #bb0000;
+}
+.bg-pinky {
+  background-color: #D10179;
+}
+
+.bg-blue {
+  background-color: @blue;
+}
+
+.bg-grey {
+  background-color: @gray;
 }
 
 .bg-pure {
@@ -75,7 +146,6 @@
   border-top: 1px solid #CFCFCB;
   box-shadow: inset 0 2px 0px rgba(0,0,0,.05);
 }
-
 
 .color-white, .white {
   color: #fff;
@@ -105,9 +175,21 @@ select, option {
 
 // Margins
 
+
+.padding-zero {
+  padding: 0;
+}
+
+.btn-padding  {
+  padding: 6px 12px;
+}
+.overide-padding {
+  margin-left: -15px;
+}
+
 .margin-zero, .no-margins {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
 }
 
 .margin-top-zero {
@@ -137,16 +219,27 @@ select, option {
 
 }
 
+.padding-r-l-0 {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 
 .padding-l-1em {
   padding-left: 1em;
 }
 
 
+
+
 .padding-after-navbar{
   padding-top: 40px;
 }
 
+.padding-05em {
+  padding-top: .5em;
+  padding-bottom: .5em;
+}
 .padding-05em {
   padding-top: .5em;
   padding-bottom: .5em;
@@ -172,6 +265,10 @@ select, option {
 }
 
 
+
+.padding-top-05em {
+  padding-top: .5em;
+}
 .padding-top-1em {
   padding-top: 1em;
 }
@@ -439,6 +536,11 @@ ul.dotted{
   display: block;
 }
 
+.inline-block{
+  display: inline-block;
+}
+
+
 .display-inline {
   display: inline;
 }
@@ -458,16 +560,23 @@ ul.dotted{
   li {
     display: inline-block;
     margin-right: 5px;
+    padding-left: 0;
     &:last-child{
     margin-right: 0;
     }
   }
 }
 
+
+
 .list-no-bullets {
   list-style-type: none;
   margin-left: 0;
   padding-left: 0;
+}
+
+.cap, .CAP, .Cap {
+  text-transform: uppercase;
 }
 
 // Floats
@@ -534,6 +643,57 @@ ul.dotted{
  { from { opacity:0; -webkit-transform: translate(0,-1em); } to { opacity:1;  -webkit-transform: translate(0,0em);} }
 
 
+
+ // .cssanimations
+ .cssanimations  .translate-always {
+
+      position: relative;
+      display: block;
+      float: left;
+      margin-right: 4px;
+
+      animation:translatealways ease-in 1; /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+
+      animation-duration:600ms;
+      animation-delay: 1s;
+      animation-iteration-count:infinite;
+
+     -webkit-transform: translate(0,-.5em);
+
+     -webkit-animation-iteration-count:infinite;
+
+      -webkit-animation:translatealways ease-in 1;
+      -webkit-animation-duration:600ms;
+      -webkit-animation-delay: .5s;
+
+
+
+      animation-timing-function:linear;
+      animation-delay:2s;
+      animation-iteration-count:infinite;
+      animation-play-state:running;
+
+      /* Safari and Chrome: */
+      -webkit-animation-timing-function:linear;
+      -webkit-animation-iteration-count:infinite;
+      -webkit-animation-direction:alternate;
+      -webkit-animation-play-state:running;
+  }
+
+
+  @keyframes translatealways { from { transform: translate(0,-.5em); } to { opacity:1; transform: translate(0,0em); } }
+
+  @-webkit-keyframes translatealways /* Safari and Chrome */
+  { from {  -webkit-transform: translate(0,-.5em); } to { opacity:1;  -webkit-transform: translate(0,0em);} }
+
+
+  .cssanimations .active   .translate-always {
+
+      top: 10px;
+      -webkit-animation: none;
+      -o-animation: none;
+      animation: none;
+  }
 
 
 .cssanimations .fade-in {
