--- a/Assets/less/bootstrap/variables.less
+++ b/Assets/less/bootstrap/variables.less
@@ -103,27 +103,27 @@
 
 @btn-default-color:              #fff;
 @btn-default-bg:                 @blue;
-@btn-default-border:             @btn-default-bg;
+@btn-default-border:             darken(@btn-default-bg, 12%);
 
 @btn-primary-color:              #fff;
 @btn-primary-bg:                 @brand-primary;
-@btn-primary-border:             @btn-primary-bg;
+@btn-primary-border:             darken(@btn-primary-bg, 12%);
 
 @btn-success-color:              #fff;
 @btn-success-bg:                 @brand-success;
-@btn-success-border:             @btn-success-bg;
+@btn-success-border:             darken(@btn-success-bg, 12%);
 
 @btn-warning-color:              #fff;
 @btn-warning-bg:                 @brand-warning;
-@btn-warning-border:             @btn-warning-bg;
+@btn-warning-border:             darken(@btn-warning-bg, 12%);
 
 @btn-danger-color:               #fff;
 @btn-danger-bg:                  @brand-danger;
-@btn-danger-border:              @btn-danger-bg;
+@btn-danger-border:             darken( @btn-danger-bg, 12%);
 
 @btn-info-color:                 #fff;
 @btn-info-bg:                    @brand-info;
-@btn-info-border:                @btn-info-bg;
+@btn-info-border:            	 darken(   @btn-info-bg, 12%);
 
 @btn-hover-color:                #fff;
 
