--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -6049,9 +6049,15 @@ td.visible-print {
 	width:100%;
 	height:400px;
 	border:1px dotted #999999;
+	margin-top:30px;
 }
 
 .list-area > span
 {
 	cursor:pointer;
+	padding-left:20px;
+}
+.list-area > span:hover
+{
+	text-decoration:underline;
 }
