--- a/Assets/less/style.less
+++ b/Assets/less/style.less
@@ -1078,10 +1078,6 @@ input[type="range"]::-webkit-slider-thumb {
 
 
 @import "slider-range.less";
-
-
-
-
 .bg-dark-gd {
 background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.8) 100%);
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.8)));
@@ -1093,6 +1089,8 @@ background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.8) 100%);
 
 
 @import "scroller.less";
+@import "datepicker.less";
+
 @import "media-query.less";
 // Utility classes
 @import "bootstrap/utilities.less"; // Has to be last to override when necessary
