--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -5374,6 +5374,7 @@ input[type="range"]::-webkit-slider-thumb {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
+ z-index:10000;
   /*.dow {
     border-top: 1px solid #ddd !important;
   }*/
@@ -6476,4 +6477,10 @@ td.visible-print {
   td.hidden-print {
     display: none !important;
   }
+}
+
+#loginForm .error
+{
+	color:#C72137;
+	font-weight;bold;
 }
