--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -6484,3 +6484,23 @@ td.visible-print {
 	color:#C72137;
 	font-weight;bold;
 }
+
+#googleMap
+{
+	height:400px;
+}
+
+.list-area
+{
+	cursor:pointer;
+}
+
+.list-area:hover
+{
+	background-color:#FAFAFA;
+}
+
+.for-sale-or-lease
+{
+	clear:both;
+}
