--- a/Assets/less/style.less
+++ b/Assets/less/style.less
@@ -1095,3 +1095,30 @@ background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.8) 100%);
 // Utility classes
 @import "bootstrap/utilities.less"; // Has to be last to override when necessary
 @import "bootstrap/responsive-utilities.less";
+
+
+#loginForm .error
+{
+	color:#C72137;
+	font-weight;bold;
+}
+
+#googleMap
+{
+	height:400px;
+}
+
+.list-area
+{
+	cursor:pointer;
+}
+
+.list-area:hover
+{
+	background-color:#FAFAFA;
+}
+
+.for-sale-or-lease
+{
+	clear:both;
+}
